[tool.poetry]
name = "pytrain"
version = "0.0.1"
description = "Automated task/test framework for differentiable software."
authors = ["Alex J. Champandard <445208+alexjc@users.noreply.github.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
prompt_toolkit = "^2.0"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
pytrain = "pytrain.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
